set skip-github-pull-request to true

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -18,3 +18,4 @@ jobs:
         with:
           token: ${{ steps.generate_token.outputs.token }}
           release-type: simple
+          skip-github-pull-request: true
